# agentforge

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  railway.json  render.yaml
backend/: Dockerfile  pyproject.toml
backend/agentforge/: __init__.py  config.py  main.py
backend/agentforge/agents/: deep_research.py
backend/agentforge/api/: app.py  deps.py  sse.py
backend/agentforge/core/: __init__.py  agent.py  events.py  memory.py  messages.py  planner.py  runtime.py  streams.py  supervisor.py  tracing.py
backend/agentforge/db/: base.py  bootstrap.py  models.py  types.py
backend/agentforge/evals/: gates.py  judge.py  metrics.py  runner.py
backend/agentforge/observability/: live.py  metrics.py
backend/agentforge/rag/: bm25.py  chunking.py  citations.py  enhance.py  parsers.py  pipeline.py  rerank.py  retriever.py  tokenize.py
backend/agentforge/services/: bus.py  chat.py  custom_tools.py  datasets.py  ingestion.py  memory_store.py  quota.py  ratelimit.py  runs.py  security.py  semantic_cache.py
backend/alembic/: env.py
backend/samples/: mcp_server.py
backend/scripts/: check_llm.py  demo_e2e.py  smoke_e2e.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_api_enhancements.py  test_bootstrap.py  test_builtin_tools.py  test_db.py  test_deep_research.py  test_enhancements.py  test_evals.py  test_guardrails.py  test_llm.py  test_mcp.py  test_memory.py  test_orchestration.py  test_platform_features.py  test_rag.py  test_reliability.py  test_span_diff.py  test_tools.py
docs/: architecture.md  (+1 more)
(+76 files in other folders)
