[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge"
version = "0.1.0"
description = "AgentForge - 企业级多智能体应用平台（自研 Agent 引擎 + Agentic RAG + 深度研究）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pgvector>=0.3.2",
    "redis>=5.0",
    "httpx>=0.27",
    "PyJWT>=2.8",
    "jieba>=0.42.1",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "ddgs",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "asgi-lifespan>=2.1",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["agentforge*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() 惯用法

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = false
exclude = ["alembic/"]
